routing fixes, enabling routing guard and login form integration

--- a/src/app/dasboard/dasboard.component.html
+++ b/src/app/dasboard/dasboard.component.html
@@ -1,20 +1,21 @@
-<form class="example-form">
+<app-template></app-template>
+<!-- <form class="example-form">
 
   <mat-form-field class="example-full-width">
-    <input matInput placeholder="First Name">
+    <input placeholder="First Name">
   </mat-form-field>
 
   <mat-form-field class="example-full-width">
-    <textarea matInput placeholder="Last Name"></textarea>
+    <textarea placeholder="Last Name"></textarea>
   </mat-form-field>
 
   <mat-form-field class="example-full-width">
-    <input matInput placeholder="Email">
+    <input placeholder="Email">
   </mat-form-field>
 
   <mat-form-field class="example-full-width">
     <span matPrefix>+61 &nbsp;</span>
-    <input type="tel" matInput placeholder="Telephone">
+    <input type="tel" placeholder="Telephone">
 
   </mat-form-field>
 
@@ -22,6 +23,6 @@
     <button mat-raised-button color="primary">Add</button>
   </div>
 
-</form>
+</form> -->
 
 <app-show-person-data></app-show-person-data>
