--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,14 @@
+<form name="loginForm" novalidate [formGroup]="loginForm" (submit)="loginHandler(loginForm.value)">
+    <p style="color: red;">{{errorMessage}}</p>
+    <mat-form-field>
+        <input matInput formControlName="email" placeholder="Email">
+    </mat-form-field>
 
-    <form name="loginForm"  novalidate>
+    <mat-form-field>
+        <input matInput formControlName="password" type="password" placeholder="Password">
+    </mat-form-field>
 
-      <mat-form-field>
-          <input matInput placeholder="Email">
-      </mat-form-field>
-
-      <mat-form-field>
-          <input matInput type="password" placeholder="Password">
-      </mat-form-field>
-
-      <button mat-raised-button color="accent" class="submit-button" aria-label="LOGIN">
-          LOGIN
-      </button>
-
-  </form>
-
+    <button type="submit" [disabled]="loginForm.invalid" mat-raised-button color="accent" class="submit-button" aria-label="LOGIN">
+        LOGIN
+    </button>
+</form>
