--- a/src/app/dasboard/dasboard.component.html
+++ b/src/app/dasboard/dasboard.component.html
@@ -1,21 +1,20 @@
-<app-template></app-template>
-<!-- <form class="example-form">
+<form class="example-form">
 
   <mat-form-field class="example-full-width">
-    <input placeholder="First Name">
+    <input matInput placeholder="First Name">
   </mat-form-field>
 
   <mat-form-field class="example-full-width">
-    <textarea placeholder="Last Name"></textarea>
+    <textarea matInput placeholder="Last Name"></textarea>
   </mat-form-field>
 
   <mat-form-field class="example-full-width">
-    <input placeholder="Email">
+    <input matInput placeholder="Email">
   </mat-form-field>
 
   <mat-form-field class="example-full-width">
     <span matPrefix>+61 &nbsp;</span>
-    <input type="tel" placeholder="Telephone">
+    <input type="tel" matInput placeholder="Telephone">
 
   </mat-form-field>
 
@@ -23,6 +22,6 @@
     <button mat-raised-button color="primary">Add</button>
   </div>
 
-</form> -->
+</form>
 
 <app-show-person-data></app-show-person-data>
