--- a/src/app/layout/topbar/topbar.component.html
+++ b/src/app/layout/topbar/topbar.component.html
@@ -2,7 +2,7 @@
   <div class="nav-wrapper">
    
     <ul id="nav-mobile" class="right hide-on-med-and-down">
-    <li><b>admin@eezeeorder.com</b></li>
+    <li><b>{{user}}</b></li>
     </ul>
   </div>
 </nav>
