--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     <img class="logo" src="https://eezeeorder.com/images/logo.png">     
   <ul>
       <li>
-          <a [routerLink]="['/dashboard']" [routerLinkActive]="active">
+          <a [routerLink]="['/dashboard']" [routerLinkActive]="['active-link']">
               <i class="fa fa-home fa-2x"></i>
               <span class="nav-text">
                   Dashboard
