--- a/src/app/show-person-data/show-person-data.component.html
+++ b/src/app/show-person-data/show-person-data.component.html
@@ -8,25 +8,25 @@
      <!-- Position Column -->
       <ng-container matColumnDef="firstName">
         <mat-header-cell *matHeaderCellDef> First Name </mat-header-cell>
-        <mat-cell *matCellDef="let element"> sravan </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.firstName}} </mat-cell>
       </ng-container>
   
       <!-- Name Column -->
       <ng-container matColumnDef="lastName">
         <mat-header-cell *matHeaderCellDef> Last Name </mat-header-cell>
-        <mat-cell *matCellDef="let element"> Rayarapu </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.lastName}} </mat-cell>
       </ng-container>
   
       <!-- Weight Column -->
       <ng-container matColumnDef="email">
         <mat-header-cell *matHeaderCellDef> Email </mat-header-cell>
-        <mat-cell *matCellDef="let element"> admin@eezeeorder.com </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.email}} </mat-cell>
       </ng-container>
   
       <!-- Symbol Column -->
       <ng-container matColumnDef="phone">
         <mat-header-cell *matHeaderCellDef> mobile </mat-header-cell>
-        <mat-cell *matCellDef="let element"> +61 0434567890 </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.phone}} </mat-cell>
       </ng-container>
   
       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
